	* move use_interfaces() to be a setting
	* extend storage interface to allow deferred flushing and flush the part-file metadata periodically
	* make statistics propagate instantly rather than on the second tick
	* support for partfiles, where partial pieces belonging to skipped files are put
	* support using multiple threads for socket operations (especially useful for high performance SSL connections)
	* allow setting rate limits for arbitrary peer groups. Generalizes per-torrent rate limits, and local peer limits
	* improved disk cache complexity O(1) instead of O(log(n))
	* add feature to allow storing disk cache blocks in an mmapped file (presumably on an SSD)
	* optimize peer connection distribution logic across torrents to scale better with many torrents
	* replaced std::map with boost::unordered_map for torrent list, to scale better with many torrents
	* optimized piece picker
	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* use hex encoding instead of base32 in create_magnet_uri
	* include name, save_path and torrent_file in torrent_status, for improved performance
	* separate anonymous mode and force-proxy mode, and tighten it up a bit
	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements