@@ -46,6 +46,8 @@ namespace libtorrent
 	TORRENT_EXPORT std::string print_address(address const& addr);
 	TORRENT_EXPORT std::string print_endpoint(tcp::endpoint const& ep);
 	TORRENT_EXPORT std::string print_endpoint(udp::endpoint const& ep);
+	TORRENT_EXPORT tcp::endpoint parse_endpoint(std::string str, error_code& ec);
+
 	TORRENT_EXPORT std::string address_to_bytes(address const& a);
 	TORRENT_EXTRA_EXPORT void hash_address(address const& ip, sha1_hash& h);
 
