@@ -83,6 +83,24 @@ sha1_hash to_hash(char const* s)
 	return ret;
 }
 
+address_v4 v4(char const* str)
+{
+	error_code ec;
+	return address_v4::from_string(str, ec);
+}
+
+address_v6 v6(char const* str)
+{
+	error_code ec;
+	return address_v6::from_string(str, ec);
+}
+
+tcp::endpoint ep(char const* ip, int port)
+{
+	error_code ec;
+	return tcp::endpoint(address::from_string(ip, ec), port);
+}
+
 tuple<int, int, bool> feed_bytes(http_parser& parser, char const* str)
 {
 	tuple<int, int, bool> ret(0, 0, false);
@@ -2227,6 +2245,24 @@ int test_main()
 	TEST_EQUAL(merkle_num_nodes(4), 7);
 	TEST_EQUAL(merkle_num_nodes(8), 15);
 	TEST_EQUAL(merkle_num_nodes(16), 31);
+
+	// test print_endpoint, parse_endpoint and print_address
+	TEST_EQUAL(print_endpoint(ep("127.0.0.1", 23)), "127.0.0.1:23");
+	TEST_EQUAL(print_endpoint(ep("ff::1", 1214)), "[ff::1]:1214");
+	ec.clear();
+	TEST_EQUAL(parse_endpoint("127.0.0.1:23", ec), ep("127.0.0.1", 23));
+	TEST_CHECK(!ec);
+	ec.clear();
+	TEST_EQUAL(parse_endpoint(" \t[ff::1]:1214 \r", ec), ep("ff::1", 1214));
+	TEST_CHECK(!ec);
+	TEST_EQUAL(print_address(v4("241.124.23.5")), "241.124.23.5");
+	TEST_EQUAL(print_address(v6("2001:ff::1")), "2001:ff::1");
+
+	parse_endpoint("[ff::1]", ec);
+	TEST_EQUAL(ec, error_code(errors::invalid_port, get_libtorrent_category()));
+
+	parse_endpoint("[ff::1:5", ec);
+	TEST_EQUAL(ec, error_code(errors::expected_close_bracket_in_address, get_libtorrent_category()));
 
 	return 0;
 }
